Fix wrong height of lecture list in some mobile browsers

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -402,7 +402,7 @@ a {
             flex: none;
         }
         @media #{$media-portrait} {
-           flex: 1 1 ($line-height-small + 8px * 2);
+           flex: 1 1 0;
         }
     }
 
